basic-demo-scenario/apple/apple-demo-service-specific-ippool.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-demo
  labels:
    app: apple-demo
  annotations:
    ncp/snat_pool: test-ippool
spec:
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    app: apple-demo
