basic-demo-scenario/apple/apple-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apple-demo-ingress
spec:
  rules:
  - host: apple.demo.pks.ytsuboi.local
    http:
      paths:
      - backend:
          serviceName: apple-demo
          servicePort: 80
