basic-demo-scenario/apple/web-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-demo-ingress
spec:
  rules:
  - host: web.demo.ytsuboi.local
    http:
      paths:
      - backend:
          serviceName: web-svc
          servicePort: 80
