basic-demo-scenario/apple/apple-demo-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apple-demo-policy
spec:
  podSelector:
    matchLabels:
      app: apple-demo
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
